# ZeldaNES

./: .gitignore  CMakeLists.txt  LICENSE  README.md  character.c  main.c  tray.h
.github/workflows/: ci.yml  release.yml
_old/: .gitignore  CMakeLists.txt  README.md
_old/include/: IOManager.h  character.h  game.h  grid.h
_old/src/: IOManager.c  character.c  game.c  main.c
assets/meta/audio/: audio.cfg
assets/textures/: README.md
include/: IOManager.h  animation.h  assets.h  audio.h  character.h  core.h  enemy.h  game.h  graphics.h  hud.h  iomanager.h  link.h  map.h  menu.h  render.h  settings.h  tray.h  utils.h
src/: IOManager.c  _main.c  animation.c  assets.c  audio.c  character.c  enemy.c  game.c  graphics.c  grid.c  hud.c  iomanager.c  link.c  main.c  map.c  menu.c  render.c  tray.c  utils.c
